# TankBattle

./: CMakeLists.txt  CellCoordinates.h  GlobalParams.h  TankBattleLauncher.cpp  TankBattleLauncher.h  main.cpp
GameController/: GameControllerModule.cpp  GameControllerModule.h
GameModel/: Board.cpp  Board.h  BotPlayer.cpp  BotPlayer.h  Cell.cpp  Cell.h  GameModelModule.cpp  GameModelModule.h  HumanPlayer.cpp  HumanPlayer.h  IPlayer.h  IPublisher.h
GameModel/GameFieldObjects/: HeavyTank.cpp  HeavyTank.h  ITank.h  LightTank.cpp  LightTank.h  MediumTank.cpp  MediumTank.h  Plate.cpp  Plate.h  PlayerPlate.cpp  PlayerPlate.h
GameView/: GameViewModule.cpp  GameViewModule.h  IObserver.h
